ingress/svc_cricket.yaml
apiVersion: v1
kind: Service
metadata:
  name: cricket 
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    env: cricket
