ingress/svc_soccer.yaml
apiVersion: v1
kind: Service
metadata:
  name: soccer 
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    env: soccer
